# json-fastapi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  pyproject.toml
.github/: badge.yml
src/json_fastapi/: RouteOptions.py  __init__.py  application.py  endpoints.py  main.py  pagination.py  util.py
src/json_fastapi/endpoints/: EntityEndpoint.py  __init__.py
src/util/: fields.py  sorting.py
tests/: test_json_fastapi.py  test_util.py
tests/fixtures/drivers/: alexander-albon.json  antonio-giovanazzi.json  carlos-sainz.json  charles-leclerc.json  daniel-ricciardo.json  danil-kvyat.json  esteban-ocon.json  george-russell.json  kevin-magnusson.json  kimi-raikkonen.json  lance-stroll.json  lando-norris.json  lewis-hamilton.json  max-verstappen.json  nicholas-latifi.json  pierre-gasly.json  romain-grosjean.json  sebastian-vettel.json  sergio-perez.json  valterri-bottas.json
